Changed the form layout to a table layout. Using two columns one for the time and one for the submission form. The submission form has a textarea to add your entry and a save button.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,3 +68,16 @@ textarea {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
 }
+
+.time-column{
+    text-align: center;
+    vertical-align: middle;
+}
+
+.form-entry{
+    display:flex;
+    justify-content: space-around;
+}
+.form-entry textarea{
+    width:90%;
+}
